# azcam-vatt4k

./: README.md  pyproject.toml  requirements.txt  requirements_github.txt  setup.cfg
azcam_vatt4k/: azcam-vatt4k.lnk  console.py  console_vatt4k.py  index_vatt4k.html  server.py  server_vatt4k.py  telescope_vatt.py  telescope_vatt_ascom.py  unused_alpaca.txt
dspcode/dspcode_vatt4k/dsptiming/: parallels.asm  s_2_231w.asm  s_2_321w.asm  serials.asm  tim2.ls
dspcode/dspcode_vatt4k/dsputility/: util2_rom.bat  utilboot2.ls
support/: Start Vatt4k.lnk  Vatt4k Console.lnk  install.py  parameters_monitor_vatt4k.ini  start_console_vatt4k.bat  start_console_vatt4k.py  start_monitor_vatt4k.bat  start_monitor_vatt4k.py  start_server_vatt4k.py
support/datafolder/parameters/: parameters_console_vatt4k.ini  parameters_server_vatt4k.ini
support/datafolder/templates/: fits_template_vatt4k_master.txt
support/dspcode/dsppci/: pci2boot.ls
support/dspcode/dsptiming/: Make dsptiming.bat  dacs.asm  parallels_rev.asm  tim2.lod  tim2_boot.ls  waveforms.asm  ypars.asm
support/dspcode/dsputility/: util2.ls  util2_host.bat
